Closed Bug 34335 Opened 26 years ago Closed 26 years ago

Open local or remote file is broken in editor

Categories

(Core :: Networking, defect, P3)

PowerPC
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: pavlov)

References

Details

(Keywords: platform-parity, regression, smoketest)

found using today's opt comm bits 2000.04.03.10 on Mac. not a problem on linux or winNT. to repro: 1. select File > Open File (or Command+O) to bring up native Open File dialog. 2. select a file to open (eg, i opened a plain text file; mjudge tried opening an html file). 3. click Open dialog. results: get a dialog saying "<volume_name> is not a registered protocol." the file is not opened --instead another blank browser window appears. unsure which component this should go into --mjudge guessed at Networking (though i might guess XPApps)...
another note: mjudge was able to open a file if he typed the path in the URL Location textfield.
Keywords: dogfood, pp, regression
This isn't gagan's problem. We switched to the new nsIFilePicker component to get the file name and it's returning a native path instead of a file: url. We need the latter so that volume names aren't confused with url protocol schemes. I'm not sure how to get a file URL from an nsILocalFile, however. I'm reassigning this to pavlov.
Assignee: gagan → pavlov
Fix checked in.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
*** Bug 34362 has been marked as a duplicate of this bug. ***
reopening bug; this is not fixed
Status: RESOLVED → REOPENED
Keywords: smoketest
Resolution: FIXED → ---
Summary: Open File dialog won't open files (unrecognized protocol) → Open local file is broken in editor
pav: while you're fixing this, note dougt's comment about getting a url from an nsIFile in bug 34365. We need to clean up all the places that use the nsIFileSpec hack.
adding sujay to cc list. btw, this is no longer a problem in the browser (tested on Mac OS 9.0, 2000.04.04.10 opt comm bits).
reassigning to editor person
Assignee: pavlov → cmanske
Status: REOPENED → NEW
pavlov is working on this nsIFilePicker should supply a nsIFileURL version of the file.
Assignee: cmanske → pavlov
Expanding to cover remote URL bug, which will be fixed by pavlov as well.
Summary: Open local file is broken in editor → Open local or remote file is broken in editor
*** Bug 34470 has been marked as a duplicate of this bug. ***
checked in fix
Status: NEW → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
Marking verified fixed.
Status: RESOLVED → VERIFIED
Linux 2000-070120 When clicking file/open file in Composer, nothing happens. (From browser it's ok however, and opens filepicker) If this isn't considered a strictly Mac-bug, it should be reopened.
sujay, tever, could you pls see if this occurs on win32 or mac? if it's xp, then this should be reopened, and pp removed. unless what RK's seeing is another bug --please let us know either way. thx!
ahh forgot about this one: It isn't a problem anymore on linux. I misread this bug. (Prob. on linux is a separate one: "open file" does nothing when clicked on from menu) Sorry for the spam.
OS: All
You need to log in before you can comment on or make changes to this bug.