Make nsIFileURL scriptable and QueryInterfaceable. fix bug #34335 and 34328 and 34470.  Minor cleanups on unix file picker dialog