xpfe/browser/resources/content/navigator.js
@@ -714,12 +714,8 @@ function RevealSearchPanel()
       fp.init(window, bundle.GetStringFromName("openFile"), nsIFilePicker.modeOpen);
       fp.setFilters(nsIFilePicker.filterAll);
       fp.show();
-      
-      // Hack to get a file: url from an nsIFile
-      var tempFileSpec = Components.classes["component://netscape/filespec"].createInstance(Components.interfaces.nsIFileSpec);
-      tempFileSpec.nativePath = fp.file.path;
-      
-      openNewWindowWith(tempFileSpec.URLString);
+
+      openNewWindowWith(fp.fileURL.spec);
     } catch (ex) { }
   }
 
